--- a/styles.css
+++ b/styles.css
@@ -63,33 +63,46 @@ body , html{
 /* NavBar */
 
 nav{
+    height: 12vh;
     position: fixed;
-    width: 100%;
+    width: 100vw;
     display: flex;
     align-items: center;
-    padding: 2vw 4vw;
+    /* padding: 2vw 4vw; */
     /* background-color: red; */
     justify-content: space-between;   
-    padding: 1.6vw 10vw;
+    padding: 1.6vw 9vw;
     background-color: #111;
     z-index: 10;
+    /* border: 2px solid red; */
+    padding-left: 5vw;
 }
 nav h1{
     font-weight: 800;
+    /* color: blue; */
+    font-size: 1.6vw;
 }
 .nav-middle{
     display: flex;
     gap: 1.5vw;
+    /* border: 2px solid green; */
+    /* margin-right: 10%; */
 }
 .nav-middle h4{
     font-size: 0.85vw;
     text-transform: uppercase;
     font-weight: 600;
+    cursor:default;
+}
+.nav-middle h4:hover{
+    color: #4A4A4A;
+    transition: 0.3s ;
 }
 #nav-bottom{
     /* background-color: green; */
     height: 0px;
     width: 90%;
+    /* border: 2px solid green; */
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
@@ -123,7 +136,37 @@ nav h1{
     margin-bottom: 0.7vw;
     overflow: hidden;
     /* background-color: red; */
+    cursor: pointer;
 }
+.bottom-content h5>span:hover{
+    color: #4A4A4A;
+    transition: 0.3s;
+}
+button{
+    background-color: #0DA34E;
+    font-size: 0.9vw;
+    border-radius: 50px;
+    padding: 1vw 1vw;
+    width: 13%;
+    /* height: 1vw; */
+    position:relative;
+    left: 5%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    color: #FFFFFF;
+    cursor: pointer;
+    font-weight: 700;
+    text-transform:uppercase;
+}
+button>span{
+    /* border: 2px solid red; */
+    width: 15%;
+    padding: 0vw;
+    height: 100%;
+}
+
 
 
 /* Page-1 img Scroller */
@@ -190,5 +233,121 @@ nav h1{
     height: 100vh;
     width: 100vw;
     background-color: #111;
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    padding: 0vw 8vw;
+    padding-bottom: 5vw;
+    align-items: center;
+    justify-content: space-between;
+    border-top:1px solid #333 ;
+}
+#page-2-left{
+    height: 100%;
+    width: 40%;
+    /* background-color: #4A4A4A; */
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 3vw 0;
+}
+#page-2-left p{
+    font-size: 0.9vw;
+
+}
+#page-2-left h5{
+    width: 75%;
+    font-weight: 400;
+    font-size: 1.4vw;
+}
+#page-2-right{
+    height: 100%;
+    width: 55%;
+    /* background-color: #4A4A4A; */
+}
+.right-content{
+    position: relative;
+    /* background-color: red; */
+    padding-top: 2vw;
+    padding-bottom: 6vw;
+    border-bottom: 1px solid #333;
+    cursor: pointer;
+}
+.right-content h2{
+    font-size: 1.4vw;
+    font-weight: 400;
+}
+.right-content img{
+    height: 7vw;
+    width: 7vw;
+    border-radius: 50px;
+    object-fit: cover;
+    position: absolute;
+    opacity: 0;
+    scale: 0;
+}
+
+
+
+/* Page 3 */
+
+#page3{
+    height: 100ch;
+    width: 100vw;
+    background-color: #111;
+    background-image: url(Assets/page3.webp);
+    position: relative;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#page3-center{
+    /* background-color: red; */
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 1vw;
+}
+#page3-center h5{
+    font-size: 0.8vw;
+    border-radius: 50px;
+    padding: 10px 20px;
+    background-color: white;
+    color: black;
+    border-radius: 50px;
+    margin-top: 1.5vw;
+    font-weight: 700;
+    opacity: 0;
+    transition: all ease 0.5s;
+    transform: translateY(10%);
+}
+#page3-center:hover h5{
+    opacity:1;
+    transform: translateY(0%);
+}
+#icon{
+    /* background-color: green; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 2.5vw;
+    border-radius: 50%;
+    background-color: white;
+}
+#icon i{
+    color: black;
+    font-size: 4.5vw;
+}
+
+#page3 video{
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    object-fit: cover;
+    transform: scaleX(0.7) scaleY(0);
+    border-radius: 30px;
+    opacity: 0;
 }
