--- a/styles.css
+++ b/styles.css
@@ -63,7 +63,7 @@ body , html{
 /* NavBar */
 
 nav{
-    height: 12vh;
+    height: 13vh;
     position: fixed;
     width: 100vw;
     display: flex;
@@ -111,11 +111,12 @@ nav h1{
     border-bottom: 2px solid white;
     display: flex;
     align-items: flex-start;
-    justify-content: center;
-    padding: 1vw 19vw;  
-    padding-top: 2vw;
+    /* justify-content: ; */
+    padding-top: 1vw;
+    padding:1vw 16vw;
     background-color:#111 ;
     z-index: -1;
+    /* gap: 1vw; */
     /* border: 2px solid red; */
 }
 .bottom-content h5 span{
@@ -127,7 +128,8 @@ nav h1{
     /* margin-top: 2vh; */
 }
 .bottom-content{
-    margin-top: 0vw;
+    margin-top: 1vw;
+    /* border: 2px solid yellow; */
 }
 #nav-bottom h5{
     overflow: hidden;
@@ -294,7 +296,7 @@ button>span{
 /* Page 3 */
 
 #page3{
-    height: 100ch;
+    height: 100vh;
     width: 100vw;
     background-color: #111;
     background-image: url(Assets/page3.webp);
@@ -350,4 +352,219 @@ button>span{
     transform: scaleX(0.7) scaleY(0);
     border-radius: 30px;
     opacity: 0;
+}
+
+
+/* Page -4 */
+
+#page4{
+    height: 100vh;
+    width: 100vw;
+    position: relative;
+    color: black;
+    display: flex;
+    flex-direction: row;
+    padding: 6vw 2vw ;
+    align-items: center;
+    justify-content:space-around;
+}
+#page4-left{
+    width: 40%;
+    height: 100%;
+    /* border: 1px solid grey; */
+}
+#page4-left h1{
+    color: black;
+    width: 70%;
+    font-size: 3vw;
+    font-weight: 600;
+    text-transform: capitalize;
+}
+#page4-right{
+    width: 50%;
+    height: 100%;
+    color: black;
+    /* border: 2px solid green; */
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+#page4-right h4, p{
+    color: black;
+    font-size: 1.7vw;
+    font-weight: 400;
+}
+#page4-right h4{
+    color: grey;
+    font-size: 1vw;
+    text-transform: uppercase;
+}
+#page4-right p{
+    width: 90%;
+}
+#p1{
+    /* border: 1px solid red; */
+    height: 56%;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+}
+#p2{
+    /* border: 1px solid red; */
+    height: 33%;
+    display: flex;
+    justify-content: space-between;
+    flex-direction: column;
+}
+
+/* Page-5 */
+#page5{
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    /* border: 1px solid green; */
+    padding: 2vw  6vw  ;
+    position: relative;
+}
+#upper{
+    width: 100%;
+    height: 50%;
+    /* border: 1px solid yellow; */
+    display: flex;
+    flex-direction:row;
+    justify-content: space-between;
+}
+#lower{
+    width: 100%;
+    height: 50%;
+    /* border: 1px solid green; */
+    display: flex;
+    flex-direction:row;
+    justify-content: space-between;
+}
+.card{
+    width: 32%;
+    height: 90%;
+    /* border: 1px solid brown; */
+    padding: 2vw;
+    background-color: #F5F5F5;
+    position: relative;
+}
+#page5 h1{
+    color: #111111;
+    font-size: 4vw;
+    font-weight: 500;
+    line-height: 1.2;
+    /* border: 1px solid blue; */
+}
+#page5 h5{
+    color: black;
+    font-weight: 500;
+    margin-top: 7%;
+}
+#page5 p{
+    font-size: 0.9vw;
+    position: absolute;
+    bottom: 10%;
+    color: grey;
+}
+
+/* Page-6 */
+#page6{
+    min-height: 100vh;
+    width: 100vw;
+    position: relative;
+}
+#section1{
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10vh 10vw;
+}
+#sec1-left{
+    height: 80vh;
+    width: 27%;
+    /* border: 2px solid yellow; */
+    display: flex;
+    flex-direction: column;
+    padding: 3vh 0vw;
+    border-top:2px solid #333 ;
+    align-items: flex-start;
+    gap: 8vw;
+}
+#sec1-left h2{
+    color: black;
+    font-weight: 300;
+    font-size: 2.2vw;
+}
+#sec1-left p{
+    font-size: 1.2vw;
+    /* width: 120%; */
+}
+#sec1-right{
+    height: 80vh;
+    width: 65%;
+    /* border: 2px solid red; */
+    position: relative;
+
+}
+#sec1-right img{
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+#sec1-right video{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
+    object-fit: cover;
+    opacity:1 ;
+    transition: opacity 0.2s ease;
+}
+
+
+/* Page7 */
+
+#page7{
+    min-height: 100vh;
+    width: 100vw;
+    background-color: #111;
+    position: relative;
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+    padding: 10vh 8vw;
+    padding-left: 2vw;
+}
+#page7>button{
+    background-color: #0DA34E;
+    padding: 1.5vw 2vw;
+    font-size: 0.9vw;
+    border-radius: 50px;
+    border: none;
+    width: 20%;
+    font-weight: 600;
+    display: flex;
+    justify-content: center;
+}
+#page7-right{
+    width: 65%;
+    border: 2px solid red;
+
+}   
+#page7-right p{
+    font-size: 2.1vw;
+    color: #FFFFFF;
+}
+#page7-right p span{
+    width: 15vw;
+    display : inline-block;
+    font-size: 1vw;
+    text-transform: capitalize;
 }
